assets/css/style.css
/* ... */
.love-to-do {
    padding-right: 100px;
    display: flex;
    flex-wrap: wrap
}

.love-to-do>* {
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: calc(25% - 30px)
}

.love-to-do .stickpad {
    background-color: #1d293a;
    padding: 45px 25px;
    margin: 0 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border-radius: 4px
}

.love-to-do>:first-of-type {
    margin-left: 0
}

.love-to-do>:last-of-type {
    margin-right: 0
}

.love-to-do .stickpad img {
    display: inline-block;
    width: 65px;
    margin-bottom: 15px
}

.love-to-do .stickpad h4 {
    font-weight: 900;
    color: hsla(0, 0%, 100%, .85);
    font-size: 22px
}

@media only screen and (max-width:991px) {
    .love-to-do>* {
        flex-grow: 1;
        flex-shrink: 1;
        flex-basis: calc(50% - 30px)
    }

    .love-to-do .stickpad {
        margin-bottom: 30px
    }

    .love-to-do>:nth-child(2n - 1) {
        margin-left: 0
    }

    .love-to-do>:nth-child(2n - 2) {
        margin-right: 0
    }
}

@media only screen and (max-width:991px) {
    .love-to-do {
        padding-right: 0
    }
}

@media only screen and (max-width:481px) {
    .love-to-do>* {
        flex-basis: 100%
    }

    .love-to-do .stickpad {
        margin: 0 0 15px;
        align-items: center
    }
}

.portfolio-area {
    position: relative
}

.portfolios {
    padding-left: 100px
}

.portfolio-nav {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 25px
}

.portfolio-nav li {
    border: 2px solid #00cf5d;
    color: hsla(0, 0%, 100%, .85);
    padding: 5px 25px;
    margin-right: 15px;
    cursor: pointer;
    border-radius: 4px
}

.portfolio-nav li.active {
    background-color: #00cf5d;
    font-weight: 900
}

.portfolio-items {
    display: flex;
    flex-wrap: wrap
}

.portfolio-items>* {
    margin: 15px;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: calc(33.33333% - 30px);
    background-color: #1d293a;
    color: hsla(0, 0%, 100%, .85);
    border-radius: 4px
}

.portfolio-items>:nth-child(3n - 2) {
    margin-left: 0
}

.portfolio-items>:last-child,
.portfolio-items>:nth-child(3n+3) {
    margin-right: 0
}

.portfolio-items .details {
    padding: 25px
}

.portfolio-items .details h4 {
    font-size: 26px;
    font-weight: 900;
    margin-bottom: 15px
}

.portfolio-items .portfolio-img {
    position: relative
}

.portfolio-items .portfolio .links {
    margin-top: 15px
}

.portfolio-items .portfolio .links ul {
    display: flex;
    font-size: 22px
}

.portfolio-items .portfolio .links ul li {
    margin-right: 10px
}

.portfolio-items .portfolio .links ul li a {
    color: hsla(0, 0%, 100%, .65);
    transition: all .2s
}

.portfolio-items .portfolio .links ul li a:hover {
    color: #00cf5d
}

.portfolio-items .portfolio-img:after {
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 1;
    background: #1d293a;
    mix-blend-mode: color;
    transition: all .5s
}

.portfolio-items .portfolio:hover .portfolio-img:after {
    opacity: 0
}

.portfolio-items .portfolio.small h4 {
    font-size: 22px
}

.portfolio-items .portfolio-img img {
    border-radius: 4px
}

.portfolio-items .details h4 a {
    text-decoration: none;
    color: inherit
}

.portfolio-items .portfolio-tools {
    display: flex;
    margin-top: 15px
}

.portfolio-items .portfolio-tools li {
    margin-right: 15px;
    text-decoration: none;
    font-weight: 300;
    color: hsla(0, 0%, 100%, .65);
    font-size: 16px
}

@media only screen and (max-width:991px) {
    .portfolio-items>* {
        flex-grow: 1;
        flex-shrink: 1;
        flex-basis: calc(50% - 30px)
    }

    .portfolio-items>:nth-child(2n - 1) {
        margin-left: 0
    }

    .portfolio-items>:nth-child(2n - 2) {
        margin-right: 0
    }

    .portfolios {
        padding-left: 0
    }

    .portfolio-nav {
        justify-content: center
    }

    .portfolio-items>* {
        flex-basis: 100%;
        margin: 0 0 30px
    }

    .portfolio-items>:last-child {
        margin-bottom: 0
    }
}

@media only screen and (max-width:768px) {
    .portfolios-regular {
        margin-top: 25px
    }
}

@media only screen and (max-width:481px) {
    .portfolio-nav {
        margin-bottom: 0
    }

    .portfolio-nav li {
        margin: 0 5px 15px
    }

    .portfolio-items>* {
        margin-bottom: 15px
    }

    .portfolios-regular {
        margin-top: 15px
    }
}

.portfolio-action {
    text-align: center
}

.contact {
    display: flex;
    flex-wrap: wrap;
    padding-right: 100px
}

.contact>* {
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: calc(50% - 30px)
}

.contact>:first-of-type {
    margin-right: 15px
}

.contact>:last-of-type {
    margin-left: 15px
}

.contact-status p {
    line-height: 2
}

.contact-details li {
    margin-bottom: 15px
}

.contact-details h5 {
    font-size: 26px;
    font-weight: 900
}

.contact-details p span {
    font-weight: 300;
    color: hsla(0, 0%, 100%, .65)
}

@media only screen and (max-width:768px) {
    .contact {
        padding-right: 0
    }

    .contact>* {
        flex-basis: 100%
    }

    .contact>:first-of-type {
        margin-right: 0;
        margin-bottom: 30px;
        text-align: center
    }

    .contact>:last-of-type {
        margin-left: 0;
        text-align: center
    }
}

